force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/AA_Status__c.field-meta.xml
<CustomField>
    <fullName>AA_Status__c</fullName>
    <label>AA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Loan Declined</fullName>
            </value>
            <value>
                <fullName>Loan Withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>