force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/AA_Type__c.field-meta.xml
<CustomField>
    <fullName>AA_Type__c</fullName>
    <inlineHelpText>Counter Offer or Declination?</inlineHelpText>
    <label>AA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Adverse Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>