force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/Counter_Offer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Due_Date__c</fullName>
    <inlineHelpText>Date will be populated X number of days from created date depending on FI&apos;s requirements</inlineHelpText>
    <label>Counter Offer Due Date</label>
    <type>Date</type>
</CustomField>