force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/Counter_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Type__c</fullName>
    <label>Counter Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount/Term</fullName>
            </value>
            <value>
                <fullName>Need Qualified Co-Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>