force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/Original_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Requested_Amount__c</fullName>
    <label>Original Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>