force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/Original_Requested_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Original_Requested_Interest_Rate__c</fullName>
    <label>Original Requested Interest Rate</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>