force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/Original_Requested_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_Requested_Loan_Term__c</fullName>
    <label>Original Requested Loan Term</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>