force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <default>true</default>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Loan Declined</fullName>
            </value>
            <value>
                <fullName>Loan Withdrawn</fullName>
            </value>
            <value>
                <fullName>Adverse Action Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>